# SKYIOUS-KERNEL

./: .gitignore  CONTRIBUTING.md  README.md  build_initrd.py  run_test_nographic.ps1
.github/workflows/: build.yml
SkyOS/: initrd.tar
SkyOS/etc/: init.cfg  passwd  shadow
builder/: Cargo.toml
builder/src/: main.rs
docs/: CONTRIBUTING.md  SYSCALL_ABI.md
kernel/: Cargo.toml  aarch64-linker.ld  aarch64-unknown-none.json  build.rs  linker.ld
kernel/.cargo/: config.toml
kernel/src/: acpi.rs  allocator.rs  elf_dyn.rs  emulation.rs  gdt.rs  interrupts.rs  keyboard.rs  main.rs  pty.rs  security.rs  selftest.rs  shell.rs  smp.rs  tty.rs  vga_buffer.rs
kernel/src/apic/: ioapic.rs  lapic.rs  mod.rs
kernel/src/arch/: arch_aarch64.rs  arch_x86_64.rs  mod.rs
kernel/src/crypto/: entropy.rs  mod.rs  sha256.rs
kernel/src/debug/: mod.rs  symbols.rs
kernel/src/drivers/: input.rs  mod.rs  mouse.rs  ps2.rs  rtc.rs  watchdog.rs
kernel/src/drivers/audio/: hda.rs  mod.rs  pcspeaker.rs
kernel/src/drivers/block/: cache.rs  mod.rs  partition.rs
kernel/src/drivers/gpu/: mod.rs  virtio_gpu.rs
kernel/src/drivers/graphics/: bga.rs  console.rs  mod.rs  psf.rs
kernel/src/drivers/net/: e1000.rs  mod.rs  virtio.rs
kernel/src/drivers/storage/: ahci.rs  mod.rs  nvme.rs  virtio_block.rs
kernel/src/drivers/usb/: mod.rs  xhci.rs
kernel/src/ebpf/: helpers.rs  jit.rs  maps.rs  mod.rs  verifier.rs  vm.rs
kernel/src/gui/: drawing.rs  filemanager.rs  mod.rs  mouse.rs  shell.rs  splash.rs  terminal.rs  wallpaper.rs  widgets.rs  window.rs
kernel/src/korlang/: mod.rs  runtime.rs
kernel/src/memory/: buddy.rs  frame_info.rs  mod.rs  paging.rs  slab.rs  stack.rs
kernel/src/net/: dhcp.rs  dns.rs  mod.rs
kernel/src/pci/: mod.rs
kernel/src/shell/commands/: ai.rs  debug.rs  fs.rs  mod.rs  net.rs  system.rs  theme.rs
kernel/src/syscalls/: errno.rs  io_uring.rs  mod.rs  numbers.rs  signal.rs  user_access.rs
kernel/src/task/: executor.rs  keyboard.rs  mod.rs  process.rs  scheduler.rs  thread.rs
kernel/src/tests/: ebpf_tests.rs  mod.rs  new_features.rs  skyfs_tests.rs
kernel/src/vahiai/: mod.rs
kernel/src/vfs/: ctlfs.rs  devfs.rs  ext2.rs  fat.rs  mod.rs  page_cache.rs  pipe.rs  ramfs.rs  tarfs.rs
kernel/src/vfs/skyfs/: alloc.rs  btree.rs  dir.rs  inode.rs  journal.rs  mod.rs
userspace/: Cargo.toml
userspace/coreutils/: Cargo.toml
userspace/coreutils/src/: lib.rs
userspace/init/: Cargo.toml
userspace/init/src/: main.rs
userspace/libc/src/: lib.rs  syscall.rs
userspace/libsarga/: Cargo.toml
userspace/libsarga/src/: app.rs  color.rs  drawing.rs  event.rs  framebuffer.rs  lib.rs
userspace/sarga-disp/: Cargo.toml
userspace/sarga-disp/src/: main.rs
userspace/skyedit/: Cargo.toml
userspace/skyedit/src/: main.rs
