[workspace]
resolver = "2"
members = [
    "init",
    "libc",
    "sargash",
    "libskyos",
    "svc",
    "vahid",
    "coreutils",
    "skyedit",
    "libsarga",
    "sarga-disp",
    "libskyaudio",
    "skypkg",
    "login",
    "passwd",
    "skybuild",
    "setup",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
