[package]
name = "coreutils"
version.workspace = true
edition.workspace = true

[dependencies]
skyos-libc = { path = "../libc" }
libskyos = { path = "../libskyos" }

[[bin]]
name = "ls"
path = "src/bin/ls.rs"

[[bin]]
name = "cat"
path = "src/bin/cat.rs"

[[bin]]
name = "mkdir"
path = "src/bin/mkdir.rs"

[[bin]]
name = "rm"
path = "src/bin/rm.rs"

[[bin]]
name = "cp"
path = "src/bin/cp.rs"

[[bin]]
name = "mv"
path = "src/bin/mv.rs"

[[bin]]
name = "ps"
path = "src/bin/ps.rs"

[[bin]]
name = "clear"
path = "src/bin/clear.rs"

[[bin]]
name = "uname"
path = "src/bin/uname.rs"

[[bin]]
name = "printenv"
path = "src/bin/printenv.rs"

[[bin]]
name = "sleep"
path = "src/bin/sleep.rs"

[[bin]]
name = "yes"
path = "src/bin/yes.rs"

[[bin]]
name = "rmdir"
path = "src/bin/rmdir.rs"

[[bin]]
name = "touch"
path = "src/bin/touch.rs"

[[bin]]
name = "hostname"
path = "src/bin/hostname.rs"

[[bin]]
name = "which"
path = "src/bin/which.rs"

[[bin]]
name = "env"
path = "src/bin/env.rs"

[[bin]]
name = "echo"
path = "src/bin/echo.rs"

[[bin]]
name = "head"
path = "src/bin/head.rs"

[[bin]]
name = "tail"
path = "src/bin/tail.rs"

[[bin]]
name = "wc"
path = "src/bin/wc.rs"

[[bin]]
name = "grep"
path = "src/bin/grep.rs"

[[bin]]
name = "ln"
path = "src/bin/ln.rs"

[[bin]]
name = "chmod"
path = "src/bin/chmod.rs"

[[bin]]
name = "printf"
path = "src/bin/printf.rs"

[[bin]]
name = "sort"
path = "src/bin/sort.rs"

[[bin]]
name = "uniq"
path = "src/bin/uniq.rs"

[[bin]]
name = "uptime"
path = "src/bin/uptime.rs"

[[bin]]
name = "ping"
path = "src/bin/ping.rs"

[[bin]]
name = "nslookup"
path = "src/bin/nslookup.rs"

[[bin]]
name = "wget"
path = "src/bin/wget.rs"

[[bin]]
name = "ifconfig"
path = "src/bin/ifconfig.rs"

[[bin]]
name = "netstat"
path = "src/bin/netstat.rs"

[[bin]]
name = "telnet"
path = "src/bin/telnet.rs"

[[bin]]
name = "beep"
path = "src/bin/beep.rs"

[[bin]]
name = "dd"
path = "src/bin/dd.rs"

[[bin]]
name = "blkid"
path = "src/bin/blkid.rs"

[[bin]]
name = "fdisk"
path = "src/bin/fdisk.rs"

[[bin]]
name = "df"
path = "src/bin/df.rs"

[[bin]]
name = "du"
path = "src/bin/du.rs"

[[bin]]
name = "mkfs_ext2"
path = "src/bin/mkfs_ext2.rs"

[[bin]]
name = "mkfs_fat"
path = "src/bin/mkfs_fat.rs"
